--- a/travis.yml
+++ b/travis.yml
@@ -1,125 +1,189 @@
-version: 2
+branches:
+  only: 
+    - master
+env:
+  global:
+    - ANDROID_PACKAGE_JS='seed-js.apk'
+    - ANDROID_PACKAGE_FOLDER_JS=$TRAVIS_BUILD_DIR/demo/outputs
+    - ANDROID_PACKAGE_NG='seed-ng.apk'
+    - ANDROID_PACKAGE_FOLDER_NG=$TRAVIS_BUILD_DIR/demo-angular/outputs
+    - ANDROID_SAUCE_STORAGE="https://saucelabs.com/rest/v1/storage/$SAUCE_USER"
+    - IOS_PACKAGE_JS='seed-js.zip'
+    - IOS_PACKAGE_FOLDER_JS=$TRAVIS_BUILD_DIR/demo/outputs
+    - IOS_PACKAGE_NG='seed-ng.zip'
+    - IOS_PACKAGE_FOLDER_NG=$TRAVIS_BUILD_DIR/demo-angular/outputs
+    - IOS_SAUCE_STORAGE="https://saucelabs.com/rest/v1/storage/$SAUCE_USER"
 
-default_config: &default_config
-  working_directory: ~/travis-ci
-  macos:
-    xcode: "9.3.0"
-  environment:
-    ANDROID_HOME: "/usr/local/share/android-sdk"
+matrix:
+  include:
+    - stage: "Lint"
+      language: node_js
+      os: linux
+      node_js: "10"
+      script: cd src && npm run ci.tslint
+    - stage: "Build and Test"
+      env:
+        - BuildAndroid="28"
+        - NodeJs="8"
+        - Type="TypeScript"
+      language: android
+      dist: trusty
+      os: linux
+      jdk: oraclejdk8
+      before_install: nvm install 8
+      script:
+        - cd src && npm run postclone gitHubUsername=TheGitHubUser pluginName=ThePlugin initGit=y includeTypeScriptDemo=y includeAngularDemo=n
+        - npm run build
+        - cd ../demo
+        - tns build android
+    - env: 
+        - BuildAndroid="28"
+        - Type="TypeScript"
+      language: android
+      dist: trusty
+      os: linux
+      jdk: oraclejdk8
+      before_install: nvm install 10
+      script:
+        - cd src && npm run postclone gitHubUsername=TheGitHubUser pluginName=ThePlugin initGit=y includeTypeScriptDemo=y includeAngularDemo=n
+        - npm run tsc
+        - cd ../demo
+        - travis_wait travis_retry tns build android --copy-to "$ANDROID_PACKAGE_FOLDER_JS/$ANDROID_PACKAGE_JS"
+        - "curl -u $SAUCE_USER:$SAUCE_KEY -X POST -H 'Content-Type: application/octet-stream' $ANDROID_SAUCE_STORAGE/$ANDROID_PACKAGE_JS?overwrite=true --data-binary @$ANDROID_PACKAGE_FOLDER_JS/$ANDROID_PACKAGE_JS"
+    - os: osx
+      env: 
+        - BuildiOS="12.0"
+        - Type="TypeScript"
+      osx_image: xcode10.2
+      language: node_js 
+      node_js: "10"
+      jdk: oraclejdk8
+      before_script: pod repo update
+      script: 
+        - cd src && npm run postclone gitHubUsername=TheGitHubUser pluginName=ThePlugin initGit=y includeTypeScriptDemo=y includeAngularDemo=n
+        - npm run tsc
+        - cd ../demo
+        - travis_wait travis_retry tns build ios --copy-to "./outputs/demo.app"
+        - cd $IOS_PACKAGE_FOLDER_JS && zip -r $IOS_PACKAGE_JS demo.app
+        - "curl -u $SAUCE_USER:$SAUCE_KEY -X POST -H 'Content-Type: application/octet-stream' $IOS_SAUCE_STORAGE/$IOS_PACKAGE_JS?overwrite=true --data-binary @$IOS_PACKAGE_FOLDER_JS/$IOS_PACKAGE_JS"
+    - os: linux
+      env: 
+        - BuildAndroid="28"
+        - Type="Angular"
+      language: android
+      dist: trusty
+      jdk: oraclejdk8
+      before_install: nvm install 10
+      script:
+        - cd src && npm run postclone gitHubUsername=TheGitHubUser pluginName=ThePlugin initGit=y includeTypeScriptDemo=n includeAngularDemo=y
+        - npm run tsc
+        - cd ../demo-angular
+        - travis_wait travis_retry tns build android --copy-to "$ANDROID_PACKAGE_FOLDER_NG/$ANDROID_PACKAGE_NG"
+        - "curl -u $SAUCE_USER:$SAUCE_KEY -X POST -H 'Content-Type: application/octet-stream' $ANDROID_SAUCE_STORAGE/$ANDROID_PACKAGE_NG?overwrite=true --data-binary @$ANDROID_PACKAGE_FOLDER_NG/$ANDROID_PACKAGE_NG"
+    - os: osx
+      env: 
+        - BuildiOS="12.0"
+        - Type="Angular"
+      osx_image: xcode10.2
+      language: node_js 
+      node_js: "10"
+      jdk: oraclejdk8
+      before_script: pod repo update
+      script: 
+        - cd src && npm run postclone gitHubUsername=TheGitHubUser pluginName=ThePlugin initGit=y includeTypeScriptDemo=n includeAngularDemo=y
+        - npm run tsc
+        - cd ../demo-angular
+        - travis_wait travis_retry tns build ios --copy-to "./outputs/demo-angular.app"
+        - cd $IOS_PACKAGE_FOLDER_NG && zip -r $IOS_PACKAGE_NG demo-angular.app
+        - "curl -u $SAUCE_USER:$SAUCE_KEY -X POST -H 'Content-Type: application/octet-stream' $IOS_SAUCE_STORAGE/$IOS_PACKAGE_NG?overwrite=true --data-binary @$IOS_PACKAGE_FOLDER_NG/$IOS_PACKAGE_NG"
+    - os: linux
+      language: android
+      dist: trusty
+      env:
+        - UnitTests="Android"
+        - TestVersion="latest"
+      jdk: oraclejdk8
+      before_install:
+        - nvm install 10
+      before_script:
+        - cd seed-tests && npm i
+        - android list targets
+        - echo no | android create avd --force -n test -t android-21 -b armeabi-v7a
+        - emulator -avd test -no-audio -no-window &
+        - android-wait-for-emulator
+      script: 
+        - travis_wait travis_retry npm run test.android
+    - os: osx
+      env:
+        - UnitTests="iOS"
+        - TestVersion="latest"
+      language: node_js
+      node_js: "10"
+      jdk: oraclejdk8
+      osx_image: xcode10.2
+      before_script:
+        - cd seed-tests && npm i
+      script: 
+        - travis_wait travis_retry npm run test.ios
+    - stage: "UI Tests"
+      env:
+        - Android="24"
+        - Type="TypeScript"
+      language: node_js
+      os: linux
+      node_js: "10"
+      script:
+        - npm i -g appium
+        - cd seed-tests && npm i
+        - travis_wait travis_retry npm run e2e -- --runType android24 --sauceLab --appPath $ANDROID_PACKAGE_JS
+    - os: linux
+      env:
+        - Android="24"
+        - Type="Angular"
+      language: node_js
+      os: linux
+      node_js: "10"
+      script:
+        - npm i -g appium
+        - cd seed-tests && npm i
+        - travis_wait travis_retry npm run e2e -- --runType android24 --sauceLab --appPath $ANDROID_PACKAGE_NG
+    - os: linux
+      env:
+        - iOS="12.0"
+        - Type="TypeScript"
+      language: node_js
+      node_js: "10"
+      script:
+        - npm i -g appium
+        - cd seed-tests && npm i
+        - travis_wait travis_retry npm run e2e -- --runType sim12iPhoneX --sauceLab --appPath $IOS_PACKAGE_JS
+    - os: linux
+      env:
+        - iOS="12.0"
+        - Type="Angular"
+      language: node_js
+      node_js: "10"
+      script:
+        - npm i -g appium
+        - cd seed-tests && npm i
+        - travis_wait travis_retry npm run e2e -- --runType sim12iPhoneX --sauceLab --appPath $IOS_PACKAGE_NG
 
-general:
-  branches:
-    only:
-      - master
 
-dependencies:
-  cache_directories:
-    - ~/.npm
-    - ~/Library/Caches/Homebrew
-    - ~/Library/Caches/CocoaPods
+android:
+  components:
+    - tools
+    - platform-tools
+    - build-tools-28.0.3
+    - android-21
+    - android-28
+    - extra-android-m2repository
+    - sys-img-armeabi-v7a-android-21
 
+before_install:
+    - sudo pip install --upgrade pip
+    - sudo pip install six
 
-jobs:
-  build:
-    <<: *default_config
-    steps:
-      - checkout
-      - add_ssh_keys
-      - run:
-          name: Fetch CocoaPods repository
-          command: |
-            curl https://cocoapods-specs.circleci.com/fetch-cocoapods-repo-from-s3.sh | bash -s cf
-            # Fetch cocoapods specs from S3 instead of github
-      - run:
-          name: Setup system dependencies
-          command: |
-            brew update
-            brew cask install android-sdk
-            echo y | $ANDROID_HOME/tools/bin/sdkmanager "platform-tools" "platforms;android-28" "build-tools;28.0.2" "extras;android;m2repository" "extras;google;m2repository"
-      - restore_cache:
-          key: npm-cache-{{ checksum "./package-lock.json" }}
-      - run:
-          name: "Install node dependencies"
-          command: |
-            npm install
-            npm i -g nativescript@5.4.2
-            npx tns usage-reporting disable
-            npx tns error-reporting disable
-      - save_cache:
-          key: npm-cache-{{ checksum "./package-lock.json" }}
-          paths:
-            - ~/.npm
-      - run:
-          name: "Rebuild Node SASS bindings"
-          command: npm rebuild node-sass --force
-      - run:
-          name: "Pre-launch iOS Simulator"
-          command: xcrun instruments -w "iPhone 8 (11.2) [" || true
-      - run:
-          name: "Prepare ios"
-          # Hack -> git log outputed as error
-          command: npx tns prepare ios || echo "ios build done"
-      - run:
-          name: "Prepare Android"
-          command: npx tns prepare android
-      - run:
-          name: "Build iOS"
-          command: |
-            tns prepare ios --bundle
-      - run:
-          name: "Build Android"
-          command: |
-            tns build android --bundle
-      - persist_to_workspace:
-          root: ~/travis-ci          
-
-  test-unit:
-    <<: *default_config
-    steps:
-      - attach_workspace:
-          at: ~/travis-ci
-      - run:
-          name: "Run unit tests"
-          # --justlaunch ensure the unit test suite give the hand back to the CLI in the end
-          command: |
-            npx tns usage-reporting disable
-            npx tns error-reporting disable
-            npx tns test ios --justlaunch
-  test-e2e:
-    <<: *default_config
-    steps:
-      - attach_workspace:
-          at: ~/travis-ci
-      - run:
-          name: "Run E2E tests"
-          command: |
-            npx tns usage-reporting disable
-            npx tns error-reporting disable
-            echo "TODO"
-  deploy:
-    <<: *default_config
-    steps:
-      - attach_workspace:
-          at: ~/travis-ci
-      - run:
-          name: "Deploy"
-          command: |
-            npx tns usage-reporting disable
-            npx tns error-reporting disable
-            ./scripts/deploy.sh
-workflows:
-  version: 2
-  build-test-and-deploy:
-    jobs:
-      - build
-      - test-unit:
-          requires:
-            - build
-      - test-e2e:
-          requires:
-            - build
-      - deploy:
-          requires:
-            - build
-            - test-unit
-            - test-e2e
+install:
+    - echo no | npm install -g nativescript
+    - tns usage-reporting disable
+    - tns error-reporting disable
