update-travis-yml

--- a/travis.yml
+++ b/travis.yml
@@ -3,187 +3,85 @@ branches:
     - master
 env:
   global:
-    - ANDROID_PACKAGE_JS='seed-js.apk'
+    - ANDROID_PACKAGE_JS='travis-ci.apk'
     - ANDROID_PACKAGE_FOLDER_JS=$TRAVIS_BUILD_DIR/demo/outputs
-    - ANDROID_PACKAGE_NG='seed-ng.apk'
     - ANDROID_PACKAGE_FOLDER_NG=$TRAVIS_BUILD_DIR/demo-angular/outputs
     - ANDROID_SAUCE_STORAGE="https://saucelabs.com/rest/v1/storage/$SAUCE_USER"
-    - IOS_PACKAGE_JS='seed-js.zip'
-    - IOS_PACKAGE_FOLDER_JS=$TRAVIS_BUILD_DIR/demo/outputs
-    - IOS_PACKAGE_NG='seed-ng.zip'
-    - IOS_PACKAGE_FOLDER_NG=$TRAVIS_BUILD_DIR/demo-angular/outputs
-    - IOS_SAUCE_STORAGE="https://saucelabs.com/rest/v1/storage/$SAUCE_USER"
+    - IOS_PACKAGE_JS='travis-ci.zip'
+    - IOS_APP_NAME='travis-ci.app'
+    - IOS_PACKAGE_FOLDER=$TRAVIS_BUILD_DIR/platforms/ios/build/Debug-iphonesimulator
+    - IOS_SAUCE_STORAGE="https://saucelabs.com/rest/v1/storage/$SAUCE_USER/$IOS_PACKAGE?overwrite=true"
 
+branches:
+  only: 
+    - master
 matrix:
   include:
     - stage: "Lint"
       language: node_js
       os: linux
       node_js: "10"
-      script: cd src && npm run ci.tslint
-    - stage: "Build and Test"
+      install: true
+      script: npm i && npm run tslint
+    - stage: "Build"
+      os: osx
+      env: 
+        - BuildiOS="12"
+        - Xcode="10.0"
+      osx_image: xcode10
+      language: node_js 
+      node_js: "10"
+      jdk: oraclejdk8
+      script:
+        - tns build ios --bundle --env.aot --env.uglify
+        - cd $IOS_PACKAGE_FOLDER && zip -r $IOS_PACKAGE $IOS_APP_NAME
+        - "curl -u $SAUCE_USER:$SAUCE_KEY -X POST -H 'Content-Type: application/octet-stream' $IOS_SAUCE_STORAGE --data-binary @$IOS_PACKAGE_FOLDER/$IOS_PACKAGE"
+    - language: android
       env:
         - BuildAndroid="28"
-        - NodeJs="8"
-        - Type="TypeScript"
-      language: android
-      dist: trusty
-      os: linux
-      jdk: oraclejdk8
-      before_install: nvm install 8
-      script:
-        - cd src && npm run postclone gitHubUsername=TheGitHubUser pluginName=ThePlugin initGit=y includeTypeScriptDemo=y includeAngularDemo=n
-        - npm run build
-        - cd ../demo
-        - tns build android
-    - env: 
-        - BuildAndroid="28"
-        - Type="TypeScript"
-      language: android
-      dist: trusty
       os: linux
       jdk: oraclejdk8
       before_install: nvm install 10
       script:
-        - cd src && npm run postclone gitHubUsername=TheGitHubUser pluginName=ThePlugin initGit=y includeTypeScriptDemo=y includeAngularDemo=n
-        - npm run tsc
-        - cd ../demo
-        - travis_wait travis_retry tns build android --copy-to "$ANDROID_PACKAGE_FOLDER_JS/$ANDROID_PACKAGE_JS"
-        - "curl -u $SAUCE_USER:$SAUCE_KEY -X POST -H 'Content-Type: application/octet-stream' $ANDROID_SAUCE_STORAGE/$ANDROID_PACKAGE_JS?overwrite=true --data-binary @$ANDROID_PACKAGE_FOLDER_JS/$ANDROID_PACKAGE_JS"
-    - os: osx
-      env: 
-        - BuildiOS="12.0"
-        - Type="TypeScript"
-      osx_image: xcode10.2
-      language: node_js 
-      node_js: "10"
-      jdk: oraclejdk8
-      before_script: pod repo update
-      script: 
-        - cd src && npm run postclone gitHubUsername=TheGitHubUser pluginName=ThePlugin initGit=y includeTypeScriptDemo=y includeAngularDemo=n
-        - npm run tsc
-        - cd ../demo
-        - travis_wait travis_retry tns build ios --copy-to "./outputs/demo.app"
-        - cd $IOS_PACKAGE_FOLDER_JS && zip -r $IOS_PACKAGE_JS demo.app
-        - "curl -u $SAUCE_USER:$SAUCE_KEY -X POST -H 'Content-Type: application/octet-stream' $IOS_SAUCE_STORAGE/$IOS_PACKAGE_JS?overwrite=true --data-binary @$IOS_PACKAGE_FOLDER_JS/$IOS_PACKAGE_JS"
-    - os: linux
-      env: 
-        - BuildAndroid="28"
-        - Type="Angular"
-      language: android
-      dist: trusty
-      jdk: oraclejdk8
-      before_install: nvm install 10
-      script:
-        - cd src && npm run postclone gitHubUsername=TheGitHubUser pluginName=ThePlugin initGit=y includeTypeScriptDemo=n includeAngularDemo=y
-        - npm run tsc
-        - cd ../demo-angular
-        - travis_wait travis_retry tns build android --copy-to "$ANDROID_PACKAGE_FOLDER_NG/$ANDROID_PACKAGE_NG"
-        - "curl -u $SAUCE_USER:$SAUCE_KEY -X POST -H 'Content-Type: application/octet-stream' $ANDROID_SAUCE_STORAGE/$ANDROID_PACKAGE_NG?overwrite=true --data-binary @$ANDROID_PACKAGE_FOLDER_NG/$ANDROID_PACKAGE_NG"
-    - os: osx
-      env: 
-        - BuildiOS="12.0"
-        - Type="Angular"
-      osx_image: xcode10.2
-      language: node_js 
-      node_js: "10"
-      jdk: oraclejdk8
-      before_script: pod repo update
-      script: 
-        - cd src && npm run postclone gitHubUsername=TheGitHubUser pluginName=ThePlugin initGit=y includeTypeScriptDemo=n includeAngularDemo=y
-        - npm run tsc
-        - cd ../demo-angular
-        - travis_wait travis_retry tns build ios --copy-to "./outputs/demo-angular.app"
-        - cd $IOS_PACKAGE_FOLDER_NG && zip -r $IOS_PACKAGE_NG demo-angular.app
-        - "curl -u $SAUCE_USER:$SAUCE_KEY -X POST -H 'Content-Type: application/octet-stream' $IOS_SAUCE_STORAGE/$IOS_PACKAGE_NG?overwrite=true --data-binary @$IOS_PACKAGE_FOLDER_NG/$IOS_PACKAGE_NG"
-    - os: linux
-      language: android
-      dist: trusty
-      env:
-        - UnitTests="Android"
-        - TestVersion="latest"
-      jdk: oraclejdk8
-      before_install:
-        - nvm install 10
-      before_script:
-        - cd seed-tests && npm i
-        - android list targets
-        - echo no | android create avd --force -n test -t android-21 -b armeabi-v7a
-        - emulator -avd test -no-audio -no-window &
-        - android-wait-for-emulator
-      script: 
-        - travis_wait travis_retry npm run test.android
-    - os: osx
-      env:
-        - UnitTests="iOS"
-        - TestVersion="latest"
-      language: node_js
-      node_js: "10"
-      jdk: oraclejdk8
-      osx_image: xcode10.2
-      before_script:
-        - cd seed-tests && npm i
-      script: 
-        - travis_wait travis_retry npm run test.ios
+        - tns build android --bundle --env.aot --env.uglify --env.snapshot
+        - "curl -u $SAUCE_USER:$SAUCE_KEY -X POST -H 'Content-Type: application/octet-stream' $ANDROID_SAUCE_STORAGE --data-binary @$ANDROID_PACKAGE_FOLDER/app-debug.apk"
     - stage: "UI Tests"
       env:
-        - Android="24"
-        - Type="TypeScript"
+        - AndroidEmulator="23"
       language: node_js
       os: linux
       node_js: "10"
       script:
-        - npm i -g appium
-        - cd seed-tests && npm i
-        - travis_wait travis_retry npm run e2e -- --runType android24 --sauceLab --appPath $ANDROID_PACKAGE_JS
+      #  - npm i -g appium@1.8.0
+        - npm i
+        - travis_retry npm run e2e -- --runType android23 --sauceLab --appPath $ANDROID_PACKAGE
     - os: linux
-      env:
-        - Android="24"
-        - Type="Angular"
-      language: node_js
-      os: linux
+      env: 
+        - iOS="11"
+      language: node_js 
       node_js: "10"
-      script:
-        - npm i -g appium
-        - cd seed-tests && npm i
-        - travis_wait travis_retry npm run e2e -- --runType android24 --sauceLab --appPath $ANDROID_PACKAGE_NG
-    - os: linux
-      env:
-        - iOS="12.0"
-        - Type="TypeScript"
-      language: node_js
-      node_js: "10"
-      script:
-        - npm i -g appium
-        - cd seed-tests && npm i
-        - travis_wait travis_retry npm run e2e -- --runType sim12iPhoneX --sauceLab --appPath $IOS_PACKAGE_JS
-    - os: linux
-      env:
-        - iOS="12.0"
-        - Type="Angular"
-      language: node_js
-      node_js: "10"
-      script:
-        - npm i -g appium
-        - cd seed-tests && npm i
-        - travis_wait travis_retry npm run e2e -- --runType sim12iPhoneX --sauceLab --appPath $IOS_PACKAGE_NG
-
-
+      script: 
+      #  - npm i -g appium@1.8.0
+        - npm i
+        - travis_wait travis_retry npm run e2e -- --runType sim.iPhone8 --sauceLab --appPath $IOS_PACKAGE
 android:
   components:
     - tools
     - platform-tools
     - build-tools-28.0.3
-    - android-21
     - android-28
     - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-21
 
-before_install:
-    - sudo pip install --upgrade pip
-    - sudo pip install six
+before_cache:
+    - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
+cache:
+    directories:
+        - .nvm
+        - $HOME/.gradle/caches/
+        - $HOME/.gradle/wrapper/
 
 install:
-    - echo no | npm install -g nativescript
+    - pip install six
+    - echo no | npm install -g nativescript@latest --ignore-scripts
     - tns usage-reporting disable
     - tns error-reporting disable
