--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "description": "NativeScript Application",
   "license": "SEE LICENSE IN <your-license-filename>",
-  "repository": "<fill-your-repository-here>",
+  "repository": "HaikelO/travis-ci",
   "dependencies": {
     "@angular/animations": "~8.0.0",
     "@angular/common": "~8.0.0",
@@ -26,6 +26,7 @@
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.5.0",
     "tns-core-modules": "~5.4.0",
+    "tslint": "^5.20.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
