fix-travis-config-global

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ branches:
     - master
 env:
   global:
-    - ANDROID_PACKAGE_JS='travis-ci.apk'
+    - ANDROID_PACKAGE_JS='travisci.apk'
     - ANDROID_PACKAGE_FOLDER=$TRAVIS_BUILD_DIR/platforms/android/app/build/outputs/apk/debug/
     - ANDROID_SAUCE_STORAGE="https://saucelabs.com/rest/v1/storage/$SAUCE_USER"
-    - IOS_PACKAGE_JS='travis-ci.zip'
+    - IOS_PACKAGE_JS='travisci.zip'
     - IOS_APP_NAME='travisci.app'
     - IOS_PACKAGE_FOLDER=$TRAVIS_BUILD_DIR/platforms/ios/build/Debug-iphonesimulator
     - IOS_SAUCE_STORAGE="https://saucelabs.com/rest/v1/storage/$SAUCE_USER/$IOS_PACKAGE?overwrite=true"
